[Feature] swagger for spring boot 3 and disbale config server on testing
