# swagger/json/payment.json
@@ -1,1 +1,199 @@
-{"openapi":"3.0.3","info":{"title":"Payment Service","description":"API endpoints for managing Payment api","version":"1.0.0"},"servers":[{"url":"http://127.0.0.1:9090","description":"Inferred Url"}],"tags":[{"name":"PAYMENT-API","description":"Operations related to Payments"}],"paths":{"/payment":{"post":{"tags":["PAYMENT-API"],"summary":"Process a payment","description":"Creates a new payment transaction","operationId":"doPaymentUsingPOST","requestBody":{"content":{"application/json":{"schema":{"$ref":"#/components/schemas/PaymentRequest"}}}},"responses":{"200":{"description":"Payment processed successfully","content":{"*/*":{"schema":{"type":"string"}}}},"201":{"description":"Created"},"400":{"description":"Invalid payment request"},"401":{"description":"Unauthorized"},"403":{"description":"Forbidden"},"404":{"description":"Not Found"}},"security":[{"Authorization":["global"]}]}},"/payment/order/{orderId}":{"get":{"tags":["PAYMENT-API"],"summary":"Get payment details by order ID","description":"Retrieves payment details for a given order ID","operationId":"getPaymentDetailsByOrderIdUsingGET","parameters":[{"name":"orderId","in":"path","description":"orderId","required":true,"style":"simple","schema":{"type":"string"}}],"responses":{"200":{"description":"Payment details retrieved successfully","content":{"*/*":{"schema":{"$ref":"#/components/schemas/PaymentResponse"}}}},"401":{"description":"Unauthorized"},"403":{"description":"Forbidden"},"404":{"description":"Payment details not found for the given order ID"}},"security":[{"Authorization":["global"]}]}}},"components":{"schemas":{"PaymentRequest":{"title":"PaymentRequest","type":"object","properties":{"amount":{"type":"number","format":"double"},"orderId":{"type":"string"},"paymentMode":{"type":"string","enum":["APPLE_PAY","CASH","CREDIT_CARD","DEBIT_CARD","PAYPAL"]},"referenceNumber":{"type":"string"}}},"PaymentResponse":{"title":"PaymentResponse","type":"object","properties":{"amount":{"type":"number","format":"double"},"id":{"type":"string"},"orderId":{"type":"string"},"paymentDate":{"type":"string","format":"date-time"},"paymentMode":{"type":"string","enum":["APPLE_PAY","CASH","CREDIT_CARD","DEBIT_CARD","PAYPAL"]},"paymentStatus":{"type":"string"}}}},"securitySchemes":{"Authorization":{"type":"apiKey","name":"Authorization","in":"header"}}}}
+{
+  "openapi": "3.0.3",
+  "info": {
+    "title": "Payment Service",
+    "description": "API endpoints for managing Payment api",
+    "version": "1.0.0"
+  },
+  "servers": [
+    {
+      "url": "https://4f6f9047-2d15-48ce-a57f-0072f9521d63.mock.pstmn.io",
+      "description": "Postman MockServer"
+    },
+    {
+      "url": "http://gateway:9090",
+      "description": "Internal URL"
+    }
+  ],
+  "tags": [
+    {
+      "name": "PAYMENT-API",
+      "description": "Operations related to Payments"
+    }
+  ],
+  "paths": {
+    "/payment": {
+      "post": {
+        "tags": [
+          "PAYMENT-API"
+        ],
+        "summary": "Process a payment",
+        "description": "Creates a new payment transaction",
+        "operationId": "doPaymentUsingPOST",
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/PaymentRequest"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Payment processed successfully",
+            "content": {
+              "*/*": {
+                "schema": {
+                  "type": "string"
+                }
+              }
+            }
+          },
+          "201": {
+            "description": "Created"
+          },
+          "400": {
+            "description": "Invalid payment request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "404": {
+            "description": "Not Found"
+          }
+        },
+        "security": [
+          {
+            "Authorization": [
+              "global"
+            ]
+          }
+        ]
+      }
+    },
+    "/payment/order/{orderId}": {
+      "get": {
+        "tags": [
+          "PAYMENT-API"
+        ],
+        "summary": "Get payment details by order ID",
+        "description": "Retrieves payment details for a given order ID",
+        "operationId": "getPaymentDetailsByOrderIdUsingGET",
+        "parameters": [
+          {
+            "name": "orderId",
+            "in": "path",
+            "description": "orderId",
+            "required": true,
+            "style": "simple",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Payment details retrieved successfully",
+            "content": {
+              "*/*": {
+                "schema": {
+                  "$ref": "#/components/schemas/PaymentResponse"
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "404": {
+            "description": "Payment details not found for the given order ID"
+          }
+        },
+        "security": [
+          {
+            "Authorization": [
+              "global"
+            ]
+          }
+        ]
+      }
+    }
+  },
+  "components": {
+    "schemas": {
+      "PaymentRequest": {
+        "title": "PaymentRequest",
+        "type": "object",
+        "properties": {
+          "amount": {
+            "type": "number",
+            "format": "double"
+          },
+          "orderId": {
+            "type": "string"
+          },
+          "paymentMode": {
+            "type": "string",
+            "enum": [
+              "APPLE_PAY",
+              "CASH",
+              "CREDIT_CARD",
+              "DEBIT_CARD",
+              "PAYPAL"
+            ]
+          },
+          "referenceNumber": {
+            "type": "string"
+          }
+        }
+      },
+      "PaymentResponse": {
+        "title": "PaymentResponse",
+        "type": "object",
+        "properties": {
+          "amount": {
+            "type": "number",
+            "format": "double"
+          },
+          "id": {
+            "type": "string"
+          },
+          "orderId": {
+            "type": "string"
+          },
+          "paymentDate": {
+            "type": "string",
+            "format": "date-time"
+          },
+          "paymentMode": {
+            "type": "string",
+            "enum": [
+              "APPLE_PAY",
+              "CASH",
+              "CREDIT_CARD",
+              "DEBIT_CARD",
+              "PAYPAL"
+            ]
+          },
+          "paymentStatus": {
+            "type": "string"
+          }
+        }
+      }
+    },
+    "securitySchemes": {
+      "Authorization": {
+        "type": "apiKey",
+        "name": "Authorization",
+        "in": "header"
+      }
+    }
+  }
+}
